@@ -11,6 +11,7 @@ importFrom(utils, read.table, read.csv, read.fwf, read.DIF, read.fortran)
 importFrom(utils, write.table, write.csv)
 importFrom(readODS, read.ods, getNrOfSheetsInODS)
 importFrom(XML, xmlParse, xmlToDataFrame)
+importFrom(XML, newXMLNode, xmlValue, `xmlValue<-`, saveXML)
 importFrom(jsonlite, fromJSON, toJSON)
 importFrom(openxlsx, read.xlsx, write.xlsx)
 importFrom(curl, curl_download)
